--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>hornik.dev</title>
+        <title>Portfolio — Ian Hornik</title>
+        <meta name="description" content="My personal portfolio site." />
+        <meta name="theme-color" content="black" />
     </head>
     <body>
         <div id="root"></div>
