--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Portfolio — Ian Hornik</title>
         <meta name="description" content="My personal portfolio site." />
         <meta name="theme-color" content="black" />
+        <link rel="icon" href="/favicon.ico" sizes="any" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
+        <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+        <meta property="og:image" content="/apple-touch-icon.png" />
+        <meta property="og:url" content="https://hornik.dev" />
+        <meta property="og:type" content="website" />
     </head>
     <body>
         <div id="root"></div>
